feat(style): apply Things style to CredencialesInstitucionales