@@ -15,14 +15,23 @@ public class CredencialesInstitucionales {
      * @param hashContrasena Contrasena encriptada o hasheada.
      */
     public CredencialesInstitucionales(String codigoUniversitario, String hashContrasena) {
-        if (codigoUniversitario == null || codigoUniversitario.trim().isEmpty()) {
-            throw new IllegalArgumentException("El código universitario no puede ser nulo o vacío.");
+        if (codigoUniversitario == null || codigoUniversitario.isBlank()) {
+            throw new IllegalArgumentException("El código universitario no puede estar vacío.");
         }
-        if (hashContrasena == null || hashContrasena.trim().isEmpty()) {
-            throw new IllegalArgumentException("La contraseña hash no puede ser nula o vacía.");
+        if (hashContrasena == null || hashContrasena.isBlank()) {
+            throw new IllegalArgumentException("La contraseña hash no puede estar vacía.");
         }
         this.codigoUniversitario = codigoUniversitario;
         this.hashContrasena = hashContrasena;
+    }
+
+    /**
+     * Valida si el código universitario cumple con el formato requerido.
+     *
+     * @return true si es válido, de lo contrario false.
+     */
+    public boolean esCodigoValido() {
+        return this.codigoUniversitario.matches("^\\d{8}$");
     }
 
     public String getCodigoUniversitario() {
